maybe fix for loader height on mobile

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,6 +1,8 @@
 .fav-transition {
-  height: 100vh;
+  height: 100%;
   display: flex;
+  padding: 120px 0;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -9,7 +11,7 @@
   position: fixed;
   width: 100vw;
   overflow: hidden;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: 900;
