--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100vw;
   overflow: hidden;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: 900;
